tests/compile_fail/free_smart.olrn
struct Point { x: i64 }

fn main() -> void
{
    p :^Point = @alo(Point)
    @free(p)
}
